<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/home_grid_item_frame">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:id="@+id/rl_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/colorPrimary"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="10"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/iv_qrcode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/group_search_button"/>
                </LinearLayout>
                <TextView
                    android:layout_weight="2"
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:paddingLeft="15dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/group_title"
                    android:layout_centerVertical="true"
                    android:textSize="20dp"
                    android:layout_height="50dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="10"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@mipmap/group_message_button"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rl_top"
            android:layout_marginBottom="2px"
            android:orientation="vertical">
            <RadioGroup
                android:id="@+id/rg_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="#fafafa"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_near"
                    android:checked="true"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:button="@null"
                    android:drawableTop="@drawable/grop_radiobutton_development"
                    android:text="@string/group_radiobutton_develop" />


                    <RadioButton
                        android:id="@+id/rb_equipment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/searchprod_price" />
                    <ImageView
                        android:id="@+id/iv_price_state"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        />

                <RadioButton
                    android:id="@+id/rb_sort"
                    android:layout_weight="1"
                    android:button="@null"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/grop_radiobutton_community"
                    android:text="@string/group_radiobutton_community" />
            </RadioGroup>

            <FrameLayout
                android:id="@+id/id_fragment"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>