<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_above="@+id/ll_cart_buttom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/rl_personal_top"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/shopping_cart_top_bg"
            android:gravity="center_vertical"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/shoppingcart_title"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/transparent"
                    android:textSize="16sp"
                    android:layout_height="50dp" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_alignParentRight="true"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_cart_complete_edit"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:text="@string/shoppingcart_edit"
                        android:layout_centerVertical="true"
                        android:background="@android:color/transparent"
                        android:textSize="16sp"
                        android:layout_marginRight="16dp"
                        android:layout_height="50dp" />
                    <ImageView
                        android:id="@+id/iv"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:layout_centerVertical="true"
                        android:background="@mipmap/home_message_button"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_cart_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rl_personal_top"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_empty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:gravity="center"
                    />
                <com.musicdo.musicshop.view.SExpandableListView
                    android:id="@+id/exListView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:childIndicator="@null"
                    android:groupIndicator="@null" >
                </com.musicdo.musicshop.view.SExpandableListView>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:id="@id/ll_cart_buttom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/home_top_reflash_bg"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:layout_marginBottom="2px"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/all_chekbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:button="@drawable/cart_checkbox_bg"
                    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/shoppingcart_choose_all"
                    android:textColor="@color/prodetail_prod_tiny"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="￥0.00"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_add_keep"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/shoppingcart_unaccount"
                android:clickable="true"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/shoppingcart_keep_in"
                android:textColor="#FAFAFA" />

            <TextView
                android:id="@+id/tv_cart_calculate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/prodetail_freight"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/shoppingcart_calculate"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>