<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <include
        android:id="@+id/topbar_white"
        layout="@layout/topbar_white"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/shoppingcart_unaccount" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_regist_getcode"
        android:visibility="visible"
        android:orientation="vertical">
        <FrameLayout
            android:id="@+id/username_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_gravity="left|center_vertical"
                android:text="+86"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:textColor="@color/main_tab_text_click"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_marginLeft="50dp"
                android:hint="@string/login_phone_tips"
                android:enabled="false"
                android:singleLine="true"
                android:inputType="number"
                android:maxLength="11"
                android:paddingLeft="30dp"
                android:paddingRight="60dp"></EditText>

            <Button
                android:id="@+id/bt_phone_clear"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                android:background="@mipmap/login_cancel"
                android:visibility="invisible" />
        </FrameLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/shoppingcart_unaccount" />

        <FrameLayout
            android:id="@+id/usercode_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/v_login_user_line"
            android:layout_marginTop="6dp"
            android:gravity="center">

            <EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/login_verificationCode"
                android:singleLine="true"
                android:inputType="number"
                android:maxLength="4"
                android:paddingLeft="30dp"
                android:paddingRight="60dp"></EditText>

            <TextView
                android:id="@+id/tv_regist_Code"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="20dp"
                android:text="@string/register_get_verificationCode"
                android:textSize="14dp"
                android:padding="6dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/login_login_click"
                android:visibility="visible" />
            <Button
                android:id="@+id/bt_code_clear"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="128dp"
                android:background="@mipmap/login_cancel"
                android:visibility="invisible" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/shoppingcart_unaccount" />
        <Button
            android:id="@+id/bt_regist_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_forgot"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_login_unclick_now"
            android:gravity="center"
            android:text="下一步"
            android:textColor="@color/white"
            android:textSize="18dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"></LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_regist_setting_password"
        android:visibility="gone"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:gravity="center">
            <EditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/login_new_password"
                android:singleLine="true"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="30dp"
                android:paddingRight="60dp"></EditText>

            <Button
                android:id="@+id/bt_new_password_clear"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                android:background="@mipmap/login_cancel"
                android:visibility="invisible" />
        </FrameLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/shoppingcart_unaccount" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/v_login_user_line"
            android:layout_marginTop="6dp"
            android:gravity="center">

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/login_confirm_password"
                android:singleLine="true"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="30dp"
                android:paddingRight="60dp"></EditText>

            <Button
                android:id="@+id/bt_confirm_password_clear"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                android:background="@mipmap/login_cancel"
                android:visibility="invisible" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/shoppingcart_unaccount" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ll_regist_show">
            <CheckBox
                android:id="@+id/ck_remember"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="6dp"
                android:layout_centerVertical="true"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="15dp"
                android:background="@drawable/regist_remember_checkbox"
                android:button="@null" />
            <TextView
                android:layout_toRightOf="@id/ck_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:text="@string/register_show_password"
                android:layout_marginLeft="5dp"
                android:textColor="@color/prodetail_freight"
                android:textSize="14sp" />
        </RelativeLayout>
        <Button
            android:id="@+id/bt_confirm_password_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_regist_show"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_login_unclick"
            android:gravity="center"
            android:text="提交 "
            android:textColor="@color/white"
            android:textSize="18dp" />
    </LinearLayout>
</LinearLayout>
